srcs/ICAP_MarketService/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: icap-marketservice
  labels:
    app: icap-marketservice
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: icap-marketservice
  template:
    metadata:
      labels:
        app: icap-marketservice
    spec:
      containers:
        - name: icap-marketservice
          image: icapacr.azurecr.io/icap-marketservice:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: secrets-store-marketservice
              mountPath: "/mnt/secrets-store"
              readOnly: true
      volumes:
        - name: secrets-store-marketservice
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "icap-marketservice-kv"
