srcs/ICAP_MarketService/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: icap-marketservice
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: icap-marketservice
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
