srcs/ICAP_MarketService/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.azure.com/tls-cert-keyvault-uri: https://icap-vault.vault.azure.net/certificates/ICAP-AKS-CERT/687ed42192e443cdaa9635d5ab67a960    
  name: icap-marketservice-ingress
  namespace: default
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
  - host: aks.odb-tech.com
    http:
      paths:
      - path: /market
        pathType: Prefix
        backend:
          service:
            name: icap-marketservice
            port: 
              number: 5000
